<resources>
    <string name="app_name">MEDEDUC</string>
    
    <!-- WIZARD -->
    <string-array name="wizard_introduction_messages">
        <item>Vamos aprender medicina jogando?</item>
        <item>A cada nível concluído você recebe um novo\nequipamento para o seu constultório.</item>
        <item>O jogo termina quando você estiver fera\ne com o seu consultório pronto.</item>
    </string-array>

    <string-array name="wizard_button_text">
        <item>Vamos!</item>
        <item>Entendi!</item>
        <item>Vamos\ncomeçar!</item>
    </string-array>

    <!-- MAIN OPTIONS -->
    <string name="main_options_label_leveling">Nivelamento</string>
    <string name="main_options_label_reinforcement">Reforço</string>
    <string name="main_options_label_level_one">Nível\n1</string>
    <string name="main_options_label_level_two">Nível\n2</string>
    <string name="main_options_label_level_three">Nível\n3</string>
    <string name="main_options_label_level_four">Nível\n4</string>
    <string name="main_options_label_level_five">Nível\n5</string>

</resources>
