<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/main_options_view_btn_leveling"
        style="@style/Button.Default"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_option_height_btn_others"
        android:layout_alignEnd="@+id/main_options_view_btn_level_five"
        android:layout_alignStart="@+id/main_options_view_btn_level_one"
        android:text="@string/main_options_label_leveling" />

    <Button
        android:id="@+id/main_options_view_btn_reinforcement"
        style="@style/Button.Default"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_option_height_btn_others"
        android:layout_alignEnd="@+id/main_options_view_btn_level_five"
        android:layout_alignStart="@+id/main_options_view_btn_level_one"
        android:layout_below="@+id/main_options_view_btn_leveling"
        android:layout_marginTop="@dimen/margin_small"
        android:enabled="false"
        android:text="@string/main_options_label_reinforcement" />

    <Button
        android:id="@+id/main_options_view_btn_level_one"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/main_options_view_btn_reinforcement"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:enabled="false"
        android:text="@string/main_options_label_level_one" />

    <Button
        android:id="@+id/main_options_view_btn_level_two"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/main_options_view_btn_reinforcement"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toRightOf="@+id/main_options_view_btn_level_one"
        android:enabled="false"
        android:text="@string/main_options_label_level_two" />

    <Button
        android:id="@+id/main_options_view_btn_level_three"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/main_options_view_btn_reinforcement"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toRightOf="@+id/main_options_view_btn_level_two"
        android:enabled="false"
        android:text="@string/main_options_label_level_three" />

    <Button
        android:id="@+id/main_options_view_btn_level_four"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/main_options_view_btn_reinforcement"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toRightOf="@+id/main_options_view_btn_level_three"
        android:enabled="false"
        android:text="@string/main_options_label_level_four" />

    <Button
        android:id="@+id/main_options_view_btn_level_five"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/main_options_view_btn_reinforcement"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toRightOf="@+id/main_options_view_btn_level_four"
        android:enabled="false"
        android:text="@string/main_options_label_level_five" />

</RelativeLayout>